--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#">Главная</a></li>
                 <li><a href="#">Контакты</a></li>
                 <li><a href="#">ЧаВо</a></li>
-                <li><a href="#">Библиотека</a></li>
+                <li><a href="./library.html">Библиотека</a></li>
             </ul>
         </nav>
     </header>
@@ -29,7 +29,7 @@
     <footer>
         <nav>
             <ul>
-                <li><a href="https://vk.com/s_m_e_p">СМЭП ВКонтакте</a></li>
+                <li><a href="https://vk.com/s_m_e_p">Наша группа в вк</a></li>
             </ul>
         </nav>
     </footer>
